infra/kubernetes/istio/base/destinationrule-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-gateway
  namespace: alphintra
spec:
  host: service-gateway
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1000
        maxRequestsPerConnection: 100
    tls:
      mode: DISABLE
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
