infra/kubernetes/istio/base/authorizationpolicy-gateway-allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: gateway-authz-allow-all
  namespace: alphintra
spec:
  selector:
    matchLabels:
      app: service-gateway
  rules:
    - {}
